2009-08-14  Calum Benson  <calum.benson@sun.com>

	* capplet/nwam-manager-properties.ui: 

	Changes to Connection Properties page to support both DHCP and
	manual IPv4 addresses simultaneously.

2009-08-14  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_stat_panel.c: 
	  Fix vertical alignment of entires in status panel, and change the
	  detail message to use newline, since it's quite unreadable if you
	  have an IPv6 address too.
	* common/nwamui_ncu.c:
	  Change static function get_interface_address() to take an NCU
	  argument, so that we can get information from it about the current
	  configuriation information. This is required so that we can
	  determine whether DHCP is even configured yet, if it's not then the
	  address assigned is likely to not be soruced from DHCP, despite the
	  DHCP IFF flag set - this fixes defect#10653.
	* daemon/status_icon.c: 
	  Only show an ncu disconnect message if it's in the active priority
	  group.
	* common/libnwamui.c: 
	  Fix some issues in nwamui_util_get_interface_address() which
	  prevented it from reading the IPv6 information.

2009-08-13  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_wifi_net.c: 
	  Fix defect#9799 to allow for removal of all BSSIDs, unsetting the
	  property if it's an empty list.

2009-08-13  darren kenny  <darren.kenny@sun.com>

	* capplet/nwam_net_conf_panel.c: 
	  Fix defect#10625, disallow selection of an active ncu in an active
	  ncp, since that's not destroyable.
	* nwam_core/usr/include/libnwam.h:
	  Update to latest version.

2009-08-12  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_condition_vbox.c: 
	  Fix problem where apply() wasn't returning a value.
	* capplet/nwam_location_dialog.c: 
	  Add a filter to the activation combo box to prevent user selection
	  system as an option.
	* common/nwamui_env.c: 
	  Allow for the setting of no condtions, removing the assertion being
	  fired causing defect#9651.

2009-08-11  Lin Ma  <Lin.Ma@Sun.COM>
