@@ -1,3 +1,8 @@
+2009-08-15  Darren Kenny  <darren.kenny@sun.com>
+
+	* capplet/nwam-manager-properties.ui:
+	  Re-add some removed references to the NwamTreeView objects.
+
 2009-08-14  Calum Benson  <calum.benson@sun.com>
 
 	* capplet/nwam-manager-properties.ui: 
